--- a/site.toml
+++ b/site.toml
@@ -7,4 +7,4 @@
 name = "site"
 
 # This page should be the root of your website. It's important.
-page = "https://www.notion.so/Replicate-Reconnect-Redefine-be608f9fd05b403da3cd9620e66671c8?pvs=4"
+page = "https://www.notion.so/Replicate-Reconnect-Redefine-be608f9fd05b403da3cd9620e66671c8"
